# Assignment0

./: CMakeLists.txt  README.md  main.c  sll.c  test-integer
src/: dll.c  dll.h  integer1.c  main.c  makefile  queue.c  queue.h  sll.c  sll.h  stack.c  stack.h  test-dll.c  test-integer.c  test-queue.c  test-sll.c  test-stack.c
